Add some mongo logic
