# src/main/kotlin/app/books/BookApi.kt
@@ -4,6 +4,7 @@ import com.example.app.books.DTO.BookCopyCreateRequest
 import com.example.app.books.DTO.BookCopyUpdateRequest
 import com.example.app.books.DTO.BookCreateRequest
 import com.example.app.books.DTO.BookUpdateRequest
+import com.example.config.DatabaseFactory
 import io.ktor.server.request.receive
 import io.ktor.server.response.respond
 import io.ktor.server.response.respondText
@@ -12,6 +13,8 @@ import io.ktor.server.routing.delete
 import io.ktor.server.routing.get
 import io.ktor.server.routing.patch
 import io.ktor.server.routing.post
+import org.bson.Document
+import org.bson.types.ObjectId
 import kotlin.text.toLong
 
 fun Route.books() {
@@ -59,5 +62,16 @@ fun Route.books() {
         val copyID = call.parameters["copyID"]!!.toLong()
         BookService.deleteBookCopy(copyID)
         call.respondText { "OK" }
+    }
+
+    post("/books/{bookId}/authors/{authorId}") {
+        val bookId = call.parameters["bookId"]!!
+        val authorId = call.parameters["authorId"]!!
+        call.respond(BookService.linkBookAuthor(bookId, authorId))
+    }
+
+    get("/books/{mongoId}/authors") {
+        val mongoId = call.parameters["mongoId"]!!
+        call.respond(BookService.getBookWithAuthors(mongoId))
     }
 }
